--- a/PGIVirtualCare/src/main/resources/application.properties
+++ b/PGIVirtualCare/src/main/resources/application.properties
@@ -8,8 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 
-
-server.port =8282
+spring.profiles.active=${ENV:dev}
 
 # Maximum size of a single file
 spring.servlet.multipart.max-file-size=10MB
